--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Inställningsskärm -->
   <div id="setupScreen" class="setup-screen active">
     <h2>Välkommen till Multiplikationsträning!</h2>
-    <p>Välj en eller flera tabeller att öva på. Appen hjälper att träna extra på det du behöver. 
-      <br>När du är klar får du ett diplom som du kan spara och visa för din lärare!</p>
+    <p>Så du tror att du är snabb?</p> <p>Här finns ingen tid att tänka efter, du måste veta vad svaret är ;)</p>
+    <p>Lycka till!</p>
     <div>
       <label>Ditt namn:</label><br>
       <input type="text" id="nameInput" placeholder="Skriv ditt namn här">
