--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="container">
   <!-- Inställningsskärm -->
   <div id="setupScreen" class="setup-screen active">
-    <h2>Välkommen till Multiplikationsträning!</h2>
-    <p>Så du tror att du är snabb?</p> <p>Här finns ingen tid att tänka efter, du måste veta vad svaret är ;)</p>
-    <p>Lycka till!</p>
+    <h2>Välkommen till Multiplikationsträning snabb!</h2>
+    <p>Så du tror att du är snabb?</p> <p>Här finns ingen tid att tänka efter, du måste veta vad svaret är ;)
+    <br>Lycka till!</p>
     <div>
       <label>Ditt namn:</label><br>
       <input type="text" id="nameInput" placeholder="Skriv ditt namn här">
