--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
   <!-- Inställningsskärm -->
   <div id="setupScreen" class="setup-screen active">
-    <h2>Välkommen till Multiplikationsträning snabb!</h2>
+    <h2>Välkommen till Multiplikationsträning SNABB!</h2>
     <p>Så du tror att du är snabb?</p> <p>Här finns ingen tid att tänka efter, du måste veta vad svaret är ;)
     <br>Lycka till!</p>
     <div>
