--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="trophy">🏆</div>
     <h2>Grattis <span id="certificateName"></span>!</h2>
     <p>Du har klarat multiplikationstabellerna:</p>
-    <p id="completedTables"></p>
+    <p id="completedTables"> på nivå SNABB! Det är galet bra!</p>
     <p>Total tid: <span id="totalTime"></span></p>
     <p id="dateCompleted"></p>
     <div class="button-group">
