--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div id="certificateScreen" class="certificate">
     <div class="trophy">🏆</div>
     <h2>Grattis <span id="certificateName"></span>!</h2>
-    <p>På SNABBASTE nivån har klarat multiplikationstabellerna:</p>
+    <p>På SNABBASTE nivån har du klarat multiplikationstabellerna:</p>
     <p id="completedTables"></p>
     <p>Det är riktigt bra!</p>
     <p>Total tid: <span id="totalTime"></span></p>
